# karlo

./: .gitignore  README.md  index.html  karlo.code-workspace  package.json  tsconfig.json  vite.config.ts
.github/workflows/: linux-artifact.yml  node.js.yml
api/: .eslintrc.json  package.json
api/src/: main.ts
docs/: reboot-plan.md
ops/: cabinet.env.example  curate-arcade-library.test.ts  curate-arcade-library.ts  deploy-cabinet.sh  organize-arcade-library.py  organize-arcade-library.ts  provision-cabinet.sh  sync-arcade-library.sh
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  contract.rs  db.rs  importer.rs  launcher.rs  lib.rs  main.rs  media_protocol.rs  media_server.rs  seed.rs  store.rs
src/app/: bootstrap.ts  browse.test.ts  browse.ts  cabinet-config.test.ts  cabinet-config.ts  calibration.test.ts  calibration.ts  library.ts  media.test.ts  media.ts  mock-catalog.json  mock-data.ts  navigation.test.ts  navigation.ts  types.ts
ui/: .eslintrc.json  package.json
ui/pages/: index.tsx
ui/styles/: globals.css
