[package]
name = "karlo"
version = "0.1.0"
description = "LCD-first MAME cabinet frontend"
authors = ["Ben Truyman <ben@truyman.com>"]
license = "MIT"
edition = "2021"
build = "build.rs"

[lib]
name = "karlo"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
